# tul-icp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  app.cpp  app.hpp  fpsmeter.hpp  utils.cpp  utils.hpp  vcpkg.json
resources/models/planets/: neptune.mtl  saturn.mtl  sun.mtl  venus.mtl
resources/models/planets/_zaloha/: neptune.fbx  venus.blend
resources/shaders/: skybox.frag  skybox.vert
src/: app.cpp  app.hpp  assets.hpp  audio_manager.cpp  audio_manager.hpp  camera.hpp  dequeue.hpp  utils.cpp  utils.hpp
src/shaders/: Mesh.hpp  Model.hpp  OBJLoader.cpp  OBJLoader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp
